# ucum-rs

./: .gitignore  ADVANCED_TUTORIAL.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  FHIR_INTEGRATION.md  LICENSE  LICENSE.md  README.md  TUTORIAL.md  USER_GUIDE.md  build.rs  justfile  package-lock.json  package.json  toggle-ucum-core-dep.sh
.github/workflows/: ci.yml  deploy-playground.yml  release.yml
.junie/: guidelines.md
benches/: README.md  benchmarks.rs  memory_bench.rs
playground/: README.md  biome.json  index.html  package.json  pnpm-lock.yaml  test-wasm.html  tsconfig.json  vite.config.ts
playground/src/: App.module.css  App.svelte  App.tsx  app.css  main.ts  main.tsx
playground/src/components/: ArithmeticTab.module.css  ArithmeticTab.svelte  ArithmeticTab.tsx  BasicValidationCard.svelte  CacheIndicator.tsx  ConversionTab.module.css  ConversionTab.svelte  ConversionTab.tsx  FhirTab.module.css  FhirTab.svelte  FhirTab.tsx  PropertyValidationCard.svelte  Sidebar.module.css  Sidebar.tsx  UnitAutocomplete.tsx  UnitCompatibilityCard.svelte  UnitInfoTab.module.css  UnitInfoTab.svelte  UnitInfoTab.tsx  ValidationTab.module.css  ValidationTab.svelte  ValidationTab.tsx
playground/src/hooks/: useUcum.ts
playground/src/styles/: global.css  theme.ts
spec/: 01-introduction.md  02-grammar.md  03-semantics.md  04-tables.md  04a-prefixes-and-base.md  04b-si-and-derived.md  04c-customary-units.md  04d-specialized-units.md  04e-information-units.md  UCUM.g4  glossary.md  reference-index.md
src/: ast.rs  display.rs  error.rs  evaluator.rs  expr.rs  fhir.rs  lib.rs  parser.rs  performance.rs  precision.rs  registry.rs  special_units.rs  suggestions.rs  types.rs  wasm.rs
tasks/: optimization_plan.md  parser_performance_optimization_plan.md
tests/: arbitrary.rs  enhanced_search.rs  error.rs  evaluator.rs  expr.rs  lookup.rs  micro.rs  new_units.rs  official_tests_grouped.rs  phase6_extended_functionality.rs  registry_completeness.rs  special_units.rs
ucum-cli/: Cargo.toml  INTERACTIVE_FEATURES.md  README.md
ucum-cli/src/: main.rs
ucum-core/: Cargo.toml  ENHANCED_API_TUTORIAL.md  PERFORMANCE_BASELINE.md  README.md  build.rs
ucum-core/benches/: comprehensive_benchmarks.rs  evaluator_benchmarks.rs  parser_benchmarks.rs  performance.rs  simple_performance.rs
ucum-core/examples/: basic_usage.rs  comprehensive_api_demo.rs  debug_dnp.rs  debug_pa_evaluator.rs  debug_phase6.rs  fhirpath_integration.rs  fhirpath_quantity_operations.rs  performance_benchmark.rs  performance_test.rs  phase6_summary.rs  test_mg_error.rs  test_pa_debug.rs
ucum-core/src/: ast.rs  display.rs  error.rs  evaluator.rs  expr.rs  fhirpath.rs  grammar.rs  lib.rs  parser.rs  performance.rs  precision.rs  registry.rs  special_units.rs  suggestions.rs  types.rs  units.rs
ucum-core/tests/: arbitrary.rs  enhanced_search.rs  error.rs  evaluator.rs  expr.rs  fixture_tests.rs  grammar_tests.rs  lookup.rs  micro.rs  official_tests_grouped.rs  phase6_extended_functionality.rs  registry_completeness.rs  special_units.rs
ucum-core/tests/fixtures/: cases.csv
ucum-core/ucum-core/: ADR_001_COMPLETION_SUMMARY.md  ADR_IMPLEMENTATION_SUMMARY.md
ucum-core/ucum-core/examples/: debug_kg_g_simple.rs
ucum-core/ucum-core/src/: special_units.rs
ucum-core/ucum-core/ucum-core/ucum-core/: FINAL_TEST_ANALYSIS.md
ucum-core/ucum-core/ucum-core/ucum-core/src/: precision.rs
ucum-fhir/: Cargo.toml  README.md
ucum-fhir/src/: lib.rs
ucum-fuzz/: Cargo.toml  README.md
ucum-fuzz/src/: fuzz_evaluator.rs  fuzz_fhir_quantity.rs  fuzz_parser.rs
ucum-wasm/: Cargo.toml  README.md  package.json
ucum-wasm/src/: lib.rs
ucum-wasm/types/: index.d.ts
