[workspace]
members = [
    "ucum-core",
    "ucum-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.3"
edition = "2024"
authors = ["OctoFHIR Team <funyloony@gmail.com>"]
license = "MIT"
repository = "https://github.com/octofhir/ucum-rs"
keywords = ["fhir", "ucum", "units", "measurement", "healthcare"]
categories = ["science", "data-structures", "parsing"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
url = "2.4"
regex = "1.9"
lazy_static = "1.4"
indexmap = "2.0"
clap = { version = "4.5.27", features = ["derive"] }

