[package]
name = "octofhir-ucum"
version = "0.5.0"
edition = "2024"
authors = ["OctoFHIR Team <funyloony@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/octofhir/ucum-rs"
keywords = ["fhir", "ucum", "units", "measurement", "healthcare"]
categories = ["science", "data-structures", "parsing"]
description = "UCUM (Unified Code for Units of Measure) library for FHIRPath quantity operations with CLI, WASM, and FHIR integration"
documentation = "https://docs.rs/octofhir-ucum"
homepage = "https://github.com/octofhir/ucum-rs"
include = [
    "ucum-essence.xml",
    "src",
    "examples",
    "benches",
    "README.md",
    "build.rs",
]

[lib]
name = "octofhir_ucum"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "octofhir-ucum"
path = "src/bin/cli.rs"
required-features = ["cli"]

[features]
default = ["std"]
std = []
serde = ["dep:serde"]
cli = ["std", "dep:clap", "dep:anyhow", "dep:human-panic"]
wasm = [
    "dep:wasm-bindgen",
    "dep:serde-wasm-bindgen",
    "dep:console_error_panic_hook",
    "serde",
]
fhir = ["std", "serde"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2"
regex = "1.9"
nom = "8"
lazy_static = "1.4"
rust_decimal = "1.36"
fuzzy-matcher = "0.3"
phf = { version = "0.11", features = ["macros"] }
once_cell = "1.19"
memchr = "2.7"
smallvec = "1.13"

# CLI dependencies
clap = { version = "4", features = ["derive"], optional = true }
anyhow = { version = "1.0", optional = true }
human-panic = { version = "2.0.3", optional = true }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
quick-xml = "0.38"
serde_json = "1"
wasm-bindgen-test = "0.3"

[build-dependencies]
quick-xml = "0.38"
serde = "1"
serde_derive = "1"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "memory_bench"
harness = false

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
