[package]
name = "ucum-cli"
version.workspace = true
edition.workspace = true
description = "UCUM (Unified Code for Units of Measure) command-line interface"

[dependencies]
ucum-core = { path = "../ucum-core" }
clap = { workspace = true }
clap_complete = "4"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = "1.0"

[[bin]]
name = "octofhir-ucum"
path = "src/main.rs"