[package]
name = "octofhir-ucum-cli"
version.workspace = true
edition.workspace = true
description = "UCUM (Unified Code for Units of Measure) command-line interface"
license = "MIT"
documentation = "https://github.com/octofhir/ucum-rs"
homepage = "https://github.com/octofhir/ucum-rs"
repository = "https://github.com/octofhir/ucum-rs"

[dependencies]
octofhir-ucum-core = { path = "../ucum-core" } # Uncomment for local development
clap = { workspace = true }
clap_complete = "4"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = "1.0"

[[bin]]
name = "octofhir-ucum"
path = "src/main.rs"
