[package]
name = "octofhir-ucum-core"
version.workspace = true
edition = "2024"
description = "UCUM (Unified Code for Units of Measure) core library for FHIRPath quantity operations"
license = "MIT"
documentation = "https://docs.rs/octofhir-ucum-core"
homepage = "https://github.com/octofhir/ucum-rs"
repository = "https://github.com/octofhir/ucum-rs"

[features]
default = ["std"]
std = []
serde = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
url = { workspace = true }
regex = { workspace = true }
nom = "7"
lazy_static = { workspace = true }
indexmap = { workspace = true }
quick-xml = { version = "0.31", features = ["serialize"] }
serde-xml-rs = "0.6"

[build-dependencies]
quick-xml = "0.31"
serde = "1"
serde_derive = "1"
serde-xml-rs = "0.6"
