[package]
name = "octofhir-ucum-core"
version.workspace = true
edition = "2024"
description = "UCUM (Unified Code for Units of Measure) core library for FHIRPath quantity operations"
license = "Apache-2.0"
documentation = "https://docs.rs/octofhir-ucum-core"
homepage = "https://github.com/octofhir/ucum-rs"
repository = "https://github.com/octofhir/ucum-rs"
keywords = ["fhir", "ucum", "units", "measurement", "healthcare"]
categories = ["science", "data-structures", "parsing"]
include = ["ucum-essence.xml", "src", "examples", "benches", "README.md", "build.rs"]


[features]
default = ["std"]
std = []
serde = []

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
nom = "8"
lazy_static = { workspace = true }
rust_decimal = "1.36"
fuzzy-matcher = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
quick-xml = "0.31"

[build-dependencies]
quick-xml = "0.31"
serde = "1"
serde_derive = "1"

[[bench]]
name = "parser_benchmarks"
harness = false

[[bench]]
name = "evaluator_benchmarks"
harness = false

[[bench]]
name = "comprehensive_benchmarks"
harness = false
