[package]
name = "octofhir-ucum-fhir"
version.workspace = true
edition.workspace = true
description = "FHIR integration for the UCUM (Unified Code for Units of Measure) library"
license = "MIT"
documentation = "https://docs.rs/octofhir-ucum-fhir"
homepage = "https://github.com/octofhir/ucum-rs"
repository = "https://github.com/octofhir/ucum-rs"
keywords = ["fhir", "ucum", "units", "measurement", "healthcare"]
categories = ["science", "data-structures", "parsing"]

[features]
default = ["std"]
std = ["octofhir-ucum-core/std"]
serde = ["octofhir-ucum-core/serde", "dep:serde"]

[dependencies]
octofhir-ucum-core = { path = "../ucum-core" } # Uncomment for local development
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
