[package]
name = "octofhir-ucum-wasm"
version.workspace = true
edition = "2024"
description = "WebAssembly bindings for the UCUM (Unified Code for Units of Measure) library"
license = "MIT"
documentation = "https://docs.rs/octofhir-ucum-wasm"
homepage = "https://github.com/octofhir/ucum-rs"
repository = "https://github.com/octofhir/ucum-rs"
keywords = ["fhir", "ucum", "units", "measurement", "wasm"]
categories = ["science", "wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
octofhir-ucum-core = { path = "../ucum-core" }
wasm-bindgen = "0.2"
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
